compiler/test-data/parser/arena/errors/unclosed_brace.frel
module arena.errors.unclosed_brace

scheme User {
    id : Uuid .. identity
    name : String
}

arena UserArena {
    for User
